src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>APPLICANT_LICENSE_NUMBER__c</fullName>
        <label>APPLICANT LICENSE NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Integration__c</fullName>
        <description>Change to Request Sync to Update in QuickBooks Online</description>
        <inlineHelpText>Change to Request Sync to Update in QuickBooks Online</inlineHelpText>
        <label>Integration</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Sync</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBName__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName &amp;&quot;-&quot;&amp; Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QBName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_CD_Percent__c</fullName>
        <label>BD/CD Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CA_Percent__c</fullName>
        <label>CA Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Career_Applicant__c</fullName>
        <description>Filter field for career applicants coming from HubSpot.</description>
        <label>Career Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Value_Dollar__c</fullName>
        <label>Client Value ($)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Value__c</fullName>
        <label>Client Value</label>
        <picklist>
            <picklistValues>
                <fullName>MEGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Type_2__c</fullName>
        <label>Contact Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Categorization of Contact type used for List Views that will be displayed in the Console</description>
        <inlineHelpText>Categorization of Contact type used for List Views that will be displayed in the Console</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expediter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owners Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structured Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor: Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor: Fire Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor: Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor: Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Contractor: Sprinkler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB_App_Percent__c</fullName>
        <label>DOB App Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB_Filing_Percent__c</fullName>
        <label>DOB Filing Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Days_not_contacted__c</fullName>
        <label>Days not contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Status__c</fullName>
        <label>Follow Up Status</label>
        <picklist>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No MEP Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purgatory (Blog)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintain Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconnect (Prop Lost)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow up with this Contact in the Future</description>
        <inlineHelpText>Follow up with this Contact in the Future</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_QB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From QB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName  + &quot; &quot;  +  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Follow_Up_Call__c</fullName>
        <label>Last Follow Up Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_QB_Id__c</fullName>
        <label>Opp QB Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <label>Original Source</label>
        <picklist>
            <picklistValues>
                <fullName>DOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shekhar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Campaigns</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Used to capture the phone extension of the primary phone number</description>
        <inlineHelpText>Used to capture the phone extension of the primary phone number</inlineHelpText>
        <label>Phone Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retainer_Percent__c</fullName>
        <label>Retainer Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SD_Percent__c</fullName>
        <label>SD Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>New York Engineers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>Contact_Type__c</columns>
        <columns>Contact_Type_2__c</columns>
        <columns>Last_Follow_Up_Call__c</columns>
        <columns>Last_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Chelsey_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Original_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Chelsey Bipat</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>notEqual</operation>
            <value>No MEP Needed,Purgatory (Blog),Proposal Stage</value>
        </filters>
        <label>Chelsey Contact View</label>
    </listViews>
    <listViews>
        <fullName>DOB_Updates</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Original_Source__c</field>
            <operation>equals</operation>
            <value>DOB</value>
        </filters>
        <label>DOB Updates</label>
    </listViews>
    <listViews>
        <fullName>Flori_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Contact_Type__c</columns>
        <columns>Original_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Flori Muresan</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>notEqual</operation>
            <value>No MEP Needed,Purgatory (Blog),Proposal Stage</value>
        </filters>
        <label>Flori Contact View</label>
    </listViews>
    <listViews>
        <fullName>Jahnavi_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Original_Source__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>contains</operation>
            <value>Jahnavi Sajip</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Not Yet Contacted,Maintain Connection,Reconnect (Prop Lost)</value>
        </filters>
        <label>Jahnavi Contact View</label>
    </listViews>
    <listViews>
        <fullName>Jenny_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Original_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>startsWith</operation>
            <value>Jennifer</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>equals</operation>
            <value>Not Yet Contacted,Maintain Connection,Reconnect (Prop Lost)</value>
        </filters>
        <label>Jenny Contact View</label>
    </listViews>
    <listViews>
        <fullName>Kailash_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Contact_Type__c</columns>
        <columns>Original_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Kailash Sridhar</value>
        </filters>
        <filters>
            <field>Follow_Up_Status__c</field>
            <operation>notEqual</operation>
            <value>No MEP Needed,Purgatory (Blog),Proposal Stage</value>
        </filters>
        <label>Kailash Contact View</label>
    </listViews>
    <listViews>
        <fullName>Michael_Contact_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Follow_Up_Status__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Original_Source__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Michael Tobias</value>
        </filters>
        <label>Michael Contact View</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Followup_Status_Validation_SH</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 NOT(ISBLANK((Sales_Head__c))),
 AND(
    ISBLANK( TEXT( Follow_Up_Status__c  )),
    ISBLANK( TEXT( Client_Value__c  )))
)</errorConditionFormula>
        <errorMessage>Please add Follow-up Status!</errorMessage>
    </validationRules>
</CustomObject>